--- a/bundles/org.openhab.binding.matter/matter-server/package.json
+++ b/bundles/org.openhab.binding.matter/matter-server/package.json
@@ -23,13 +23,9 @@
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4"
     },
-    "imports": {
-        "#general": "@matter/general",
-        "#types": "@matter/types"
-    },
     "dependencies": {
-        "@matter/main": "0.11.3",
-        "@project-chip/matter.js" : "0.11.3",
+        "@matter/main": "0.11.5-alpha.0-20241124-c836aa892",
+        "@project-chip/matter.js" : "0.11.5-alpha.0-20241124-c836aa892",
         "uuid": "^9.0.1",
         "ws": "^8.18.0",
         "yargs": "^17.7.2"
