--- a/bundles/org.openhab.binding.matter/matter-server/package.json
+++ b/bundles/org.openhab.binding.matter/matter-server/package.json
@@ -24,9 +24,9 @@
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
-        "@matter/main": "0.11.5-alpha.0-20241124-c836aa892",
-        "@matter/node": "0.11.5-alpha.0-20241124-c836aa892",
-        "@project-chip/matter.js" : "0.11.5-alpha.0-20241124-c836aa892",
+        "@matter/main": "0.11.5",
+        "@matter/node": "0.11.5",
+        "@project-chip/matter.js" : "0.11.5",
         "uuid": "^9.0.1",
         "ws": "^8.18.0",
         "yargs": "^17.7.2"
